chore: add latest fixes and remove static gateway

--- a/helm-templates/control-plane/values.yaml
+++ b/helm-templates/control-plane/values.yaml
@@ -36,7 +36,7 @@ DISABLE_IP_ROUTE_REGISTRATION: true
 DNS_LOOKUP_FAMILY: 'V6_PREFERRED'
 ORIGIN_NAMESPACE: ""
 PEER_NAMESPACE: ""
-K8S_SERVICE_TYPE: 'HEADLESS'
+K8S_SERVICE_TYPE: 'CLUSTER_IP'
 ECDH_CURVES: 'P-256,P-384'
 CONSUL_ENABLED: false
 CONSUL_URL: ''
