fix: exclude docs and mocks from code coverage

--- a/control-plane/sonar-project.properties
+++ b/control-plane/sonar-project.properties
@@ -2,4 +2,12 @@ sonar.sources=.
 sonar.tests=.
 sonar.exclusions=**_test.go,target/**
 sonar.test.inclusions=**_test.go
-sonar.coverage.exclusions=target/**,**/stub_*,**/*.pb.go,**/constancy/migration/**,**/constancy/fix/**,**/constancy/storage.go,errorcodes/constans.go
+sonar.coverage.exclusions=target/**,\
+  **/stub_*,\
+  **/*.pb.go,\
+  **/constancy/migration/**,\
+  **/constancy/fix/**,\
+  **/constancy/storage.go,\
+  errorcodes/constans.go,\
+  docs/**,\
+  test/mock/**
