--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    uses: netcracker/qubership-core-infra/.github/workflows/go-build-with-sonar.yaml@v1.0.4
+    uses: TaurMorchant/workflows-test/.github/workflows/go-build-with-sonar.yaml@main
     with:
       actor: ${{ github.actor }}
       sonar-project-key: ${{ vars.SONAR_PROJECT_KEY }}
